# comment-resolution-engine

./: .env.example  .gitignore  CONTRACTS.md  README.md  pyproject.toml  requirements.txt  resolve_comments.py
.github/workflows/: ci.yml
config/: column_mapping.example.yaml  constitution.yaml
config/contracts/: contract_declaration.yaml  matrix_contract.yaml  spectrum_contracts.yaml
docs/: architecture-review.md  compatibility-policy.md  constitution-integration.md  error-taxonomy.md  integration-with-spectrum-systems.md  output-contract.md  provenance-implementation-guidance.md  rules-engine.md  system-spec-comment-resolution-engine.md  versioning-and-drift-policy.md
docs/contracts/: mapping.md
docs/demo/: README.md
examples/: README.md  sample_comment_matrix.csv  sample_matrix.xlsx  sample_output.csv  sample_resolved_output.csv
examples/contracts/: comment_resolution_matrix_example.json  provenance_record_example.json  reviewer_comment_set_example.json
golden/: README.md
golden/expected/: sample_case_01_expected.json  sample_case_02_expected.json
prompts/: codex_run_prompt.md  resolution_engine.md
src/comment_resolution_engine/: __init__.py  cli.py  config.py  contracts.py  errors.py  (+12 more)
templates/: README.md
tests/: test_adjudication_policy.py  test_analysis.py  test_cli.py  test_column_mapping.py  test_constitution.py  test_contract_artifacts.py  test_debug_outputs.py  test_excel_io.py  test_integration_matrix.py  test_mvp_smoke.py  test_packaged_outputs.py  test_pdf_utils.py  test_pipeline.py  test_prompt_builder.py  test_rev2_drafting.py  test_rule_validation.py  test_rules_engine_integration.py  test_spreadsheet_contract.py
(+84 files in other folders)
