[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comment-resolution-engine"
version = "0.1.0"
description = "Reusable tooling to convert comment matrices into report-ready resolution tables"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Comment Resolution Engine Contributors"}]
dependencies = [
  "pandas==3.0.1",
  "openpyxl==3.1.5",
  "PyYAML==6.0.3",
  "pypdf==6.8.0",
  "cryptography==43.0.1",
  "scikit-learn==1.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]

[project.scripts]
comment-resolution-engine = "comment_resolution_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
